nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
spec:
  type: NodePort
  selector:
    app: nginx 
  ports:
    - port: 80        
      targetPort: 80   
      nodePort: 30080
